# dlp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  config.toml  flake.nix  rustfmt.toml
crates/app-config/: Cargo.toml
crates/app-config/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client-sdk/: Cargo.toml
crates/client-sdk/src/: lib.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: lib.rs  main.rs
crates/control-plane/src/db/: mod.rs
crates/control-plane/src/db/entities/: jobs.rs  mod.rs  workers.rs
crates/dlp/: Cargo.toml
crates/dlp/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260320_000001_create_jobs_and_workers.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/ui/: Cargo.toml  build.rs  index.html
crates/ui/src/: lib.rs  main.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_ARCHITECTURE.md
