[workspace]
members = [
    "crates/client-sdk",
    "crates/control-plane",
    "crates/dlp",
    "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"

