[workspace]
members = [
    "crates/client-sdk",
    "crates/control-plane",
    "crates/dlp",
    "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.6", features = ["derive", "env"] }
console_error_panic_hook = "0.1"
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"

# Enable allowed-by-default lints https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
[workspace.lints.rust]
# Detects absolute paths that start with a module name instead of crate, self, or an external crate name
absolute-paths-not-starting-with-crate = "warn"
# Detects ambiguity between a negative literal and negation that is not part of the literal
ambiguous-negative-literals = "warn"
# Detects cases where a closure returns an async block
closure-returning-async-block = "warn"
# Triggers when `Deref` is implemented for `dyn SubTrait` with `dyn SuperTrait` as the `Output` type
deref-into-dyn-supertrait = "warn"
# Detects unnecessary lifetime bounds that can be inferred automatically
explicit-outlives-requirements = "warn"
# Detects a temporary with significant destruction on the right side of `if let` and suggests rewriting it as `match`
if-let-rescope = "warn"
# Detects unnecessary use of precise capture `use<...>`
impl-trait-redundant-captures = "warn"
# Detects imports that are redundant because they were already imported
redundant-imports = "warn"
# Detects lifetime parameters that are redundant because they are equal to another named lifetime
redundant-lifetimes = "warn"
# Detects lifetimes that are used only once
single-use-lifetimes = "warn"
# Detects values created in tail expressions that trigger a custom `Drop` destructor
tail-expr-drop-order = "warn"
# Detects trivial casts that can be replaced with coercions
trivial-casts = "warn"
# Detects trivial numeric casts that can be removed
trivial-numeric-casts = "warn"
# Detects bindings that are useless because their inferred type is the unit type `()`
unit-bindings = "warn"
# Detects enums with significantly different variant sizes
variant-size-differences = "warn"
# Use of elided lifetime parameters
elided-lifetimes-in-paths = "warn"
# Forward linker warnings
linker-messages = "warn"
# Missing `fmt::Debug` implementations for public types
missing-debug-implementations = "warn"
# Checks for statements
let-underscore-drop = "warn"
# Detects non-ASCII identifiers.
non-ascii-idents = "warn"
# The unnameable_types lint detects types for which you can get objects of that type, but cannot name the type itself.
unnameable-types = "warn"
# triggers for pub items not reachable from other crates - that means neither directly accessible
unreachable-pub = "warn"

# Unsafe
# Detects missing `unsafe` on attributes considered unsafe
unsafe-attr-outside-unsafe = "warn"
# Use of `#![feature]`
unstable-features = "warn"
# Use of `unsafe` code and other potentially unsafe constructs such as `no_mangle`, `export_name`, and `link_section`
unsafe-code = "deny"
# Detects unsafe operations inside unsafe functions without an explicit unsafe block
unsafe-op-in-unsafe-fn = "deny"
# Missing documentation for public items
missing_docs = "warn"
# The ffi_unwind_calls lint detects calls to foreign functions or function pointers with C-unwind or other FFI-unwind ABIs.
ffi-unwind-calls = "warn"
# Missing `unsafe` in extern declarations
missing-unsafe-on-extern = "warn"

# Rust 2024
# Unsafe functions used as if they were safe
deprecated-safe-2024 = "warn"
# Use of expression fragments in macros when migrating to the 2024 edition
edition-2024-expr-fragment-specifier = "warn"
# Lifetime capture behavior will differ in the 2024 edition
impl-trait-overcaptures = "warn"
# Keywords used as identifiers
keyword-idents-2024 = "warn"
# Patterns whose meaning changes in Rust 2024
rust-2024-incompatible-pat = "warn"
# Trait methods that become ambiguous with traits added to the prelude in future editions
rust-2024-prelude-collisions = "warn"
# detects `#` tokens that will be parsed as part of a guarded string literal in Rust 2024.
rust-2024-guarded-string-incompatible-syntax = "warn"

# Unused
# Detects crate dependencies that are never used
unused-crate-dependencies = "deny"
# Protects against `extern crate` items that are never used
unused-extern-crates = "warn"
# Unnecessary braces around imported items
unused-import-braces = "warn"
# Detects lifetime parameters that are never used
unused-lifetimes = "warn"
# Detects macro rules that were never used
unused-macro-rules = "warn"
# Detects unnecessarily qualified names
unused-qualifications = "warn"

# Macros
# Detects use of the `macro_use` attribute
macro-use-extern-crate = "warn"
# Possible misuse of meta-variables in macro definitions
meta-variable-misuse = "warn"

# Clippy linting https://rust-lang.github.io/rust-clippy/stable/index.html
[workspace.lints.clippy]
# Many packages use different versions of the same crates; fixing that is too costly
multiple_crate_versions = "allow"
# Improve `Cargo.toml`
cargo = { level = "warn", priority = -1 }
# Simplify code
complexity = { level = "warn", priority = -1 }
# Deep code inspection
pedantic = { level = "warn", priority = -1 }
# Improve performance
perf = { level = "warn", priority = -1 }
# Encourage idiomatic code
style = { level = "warn", priority = -1 }
# Similar to correctness, but the code may be intentionally written this way
suspicious = { level = "warn", priority = -1 }
# The newest rules that are still under development
nursery = { level = "warn", priority = -1 }

# Custom Clippy rule configuration

# Nursery group
#
# Prefer functional style over imperative style when working with `Option`
# Allowed because in some cases `if let/else` is more readable than `map_or_else`
option_if_let_else = { level = "allow" }
# Checks whether string literals contain formatting arguments outside the macros
# that use them (for example, `format!`).
literal_string_with_formatting_args = { level = "warn" }

# Restriction group
#
# Use of `Result::expect`
expect_used = { level = "deny" }
# Use of `std::process::exit`
exit = { level = "deny" }
# Use of `get().unwrap()`
get_unwrap = { level = "deny" }
# Use of `panic!`
panic = { level = "deny" }
# Use of `panic!` in functions that return `Result`
panic_in_result_fn = { level = "deny" }
# Output to stderr
print_stderr = { level = "deny" }
# Output to stdout
print_stdout = { level = "deny" }
# `unwrap` in functions that return `Result`
unwrap_in_result = { level = "deny" }
# Use of `unwrap`
unwrap_used = { level = "deny" }
# Ignoring errors in `map_err`
map_err_ignore = { level = "warn" }
# Use of `map` with an unused argument over ranges
map_with_unused_argument_over_ranges = { level = "warn" }
# Use of casts via `as`
as_conversions = { level = "warn" }
# `as` cast to the placeholder type `_`
as_underscore = { level = "warn" }
# `as` cast to a pointer to an inferred type
as_pointer_underscore = { level = "warn" }
# Use of `#[cfg(not(test))]` instead of `#[cfg(test)]`
cfg_not_test = { level = "warn" }
# Dereferencing by creating a slice instead of explicit dereferencing
deref_by_slicing = { level = "warn" }
# `if-else` chains without a final `else`
else_if_without_else = { level = "warn" }
# Implementing `Error` for types whose names contain "Error"
error_impl_error = { level = "warn" }
# Visibility modifiers at struct field level
field_scoped_visibility_modifiers = { level = "warn" }
# Calling `is_file()` on `Path` instead of checking metadata
filetype_is_file = { level = "warn" }
# Comparing floating-point numbers with constants
float_cmp_const = { level = "warn" }
# Casting a function pointer to a numeric type
fn_to_numeric_cast_any = { level = "warn" }
# `if { Some(x) } else { None }` pattern that can be simplified
if_then_some_else_none = { level = "warn" }
# Use of `impl Trait` in function parameters
impl_trait_in_params = { level = "warn" }
# Infinite loops that can be replaced with explicit constructs
infinite_loop = { level = "warn" }
# Iterating over `HashMap` or `HashSet` (non-deterministic order)
iter_over_hash_type = { level = "warn" }
# Mixed reading and writing in one expression
mixed_read_write_in_expression = { level = "warn" }
# Multiple inherent impl blocks for one type
multiple_inherent_impl = { level = "warn" }
# Use of `Mutex` to guard atomic types
mutex_atomic = { level = "warn" }
# Use of `Mutex` to guard integer types
mutex_integer = { level = "warn" }
# Use of `Rc` with buffer types (`Vec`, `String`, etc.)
rc_buffer = { level = "warn" }
# Use of `Rc` with `Mutex` (prefer `Arc`)
rc_mutex = { level = "warn" }
# String indexing that can panic
string_slice = { level = "warn" }
# Use of `^` (XOR) instead of `pow` for exponentiation
suspicious_xor_used_as_pow = { level = "warn" }
# Use of the `dbg!` macro
dbg_macro = { level = "warn" }
# Decimal representation of literals
decimal_literal_representation = { level = "warn" }
# Empty `Drop` implementation
empty_drop = { level = "warn" }
# Empty enum variants with braces
empty_enum_variants_with_brackets = { level = "warn" }
# Empty structs with braces
empty_structs_with_brackets = { level = "warn" }
# Integer division that can lose a remainder
integer_division = { level = "warn" }
# Use of division or remainder operations with integers
integer_division_remainder_used = { level = "warn" }
# Including large files via `include_bytes!` or `include_str!`
large_include_file = { level = "warn" }
# Missing `#[inline]` on public items
missing_inline_in_public_items = { level = "warn" }
# Use of the remainder operator (`%`) that can panic
modulo_arithmetic = { level = "warn" }
# Unnecessary use of raw strings
needless_raw_strings = { level = "warn" }
# Multiple unsafe operations in one unsafe block
multiple_unsafe_ops_per_block = { level = "warn" }
# Suggestions to use `NonZero` types
non_zero_suggestions = { level = "warn" }
# Structs with partially public fields
partial_pub_fields = { level = "warn" }
# Initializing `PathBuf` and then calling `push` instead of creating it directly
pathbuf_init_then_push = { level = "warn" }
# Use of `pub(in ...)` instead of the shorthand `pub(crate)` or `pub(super)`
pub_without_shorthand = { level = "warn" }
# Redundant type annotations
redundant_type_annotations = { level = "warn" }
# Use of `..` in fully bound structs
rest_pat_in_fully_bound_structs = { level = "warn" }
# Use of `return` with `then` instead of `and_then`
return_and_then = { level = "warn" }
# Semicolon inside a block instead of after the block
semicolon_inside_block = { level = "warn" }
# Literal suffixes separated from the value
separated_literal_suffix = { level = "warn" }
# Use of single-character lifetime names
single_char_lifetime_names = { level = "warn" }
# Converting `&str` to `String` via `to_string` instead of `to_owned`
str_to_string = { level = "warn" }
# Use of the `+` operator for string concatenation
string_add = { level = "warn" }
# Use of `chars().any()` instead of `contains()` for string literals
string_lit_chars_any = { level = "warn" }
# Tests outside the `tests` module
tests_outside_test_module = { level = "warn" }
# Use of the `todo!` macro
todo = { level = "warn" }
# Use of `try!()` instead of the `?` operator
try_err = { level = "warn" }
# Use of `unimplemented!`
unimplemented = { level = "warn" }
# Unnecessary safety comments
unnecessary_safety_comment = { level = "warn" }
# Unnecessary safety documentation
unnecessary_safety_doc = { level = "warn" }
# Unnecessary `self` import
unnecessary_self_imports = { level = "warn" }
# Unnecessary field patterns (`field: _`)
unneeded_field_pattern = { level = "warn" }
# Use of `unreachable!`
unreachable = { level = "warn" }
# Literal suffixes not separated from the value
unseparated_literal_suffix = { level = "warn" }
# `#[allow]` attributes without a reason
allow_attributes_without_reason = { level = "warn" }
#
# Experemental
#
# Checks for usage of items through absolute paths
absolute_paths = { level = "warn" }
# Checks for usage of the #[allow] attribute and suggests replacing it with the #[expect] attribute
allow_attributes = { level = "warn" }
# Confirms that items are sorted in source files as per configuration.
arbitrary_source_item_ordering = { level = "warn" }
# Checks any kind of arithmetic operation of any type.
arithmetic_side_effects  = { level = "warn" }
# Checks for assert!(r.is_ok()) or assert!(r.is_err()) calls.
assertions_on_result_states = { level = "warn" }
# Checks for usage of .clone() on a ref-counted pointer,
clone_on_ref_ptr = { level = "warn" }
# Checks usage of std::fs::create_dir and suggest using std::fs::create_dir_all instead.
create_dir = { level = "warn" }
# Checks for usage of unicode scripts other than those explicitly allowed by the lint config.
disallowed_script_idents = { level = "warn" }
# Checks if included files in doc comments are included only for cfg(doc)
doc_include_without_cfg = { level = "warn" }
# Checks for doc comments whose paragraphs do not end with a period or another punctuation mark
doc_paragraphs_missing_punctuation = { level = "warn" }
# Checks for usage of indexing or slicing that may panic at runtime.
indexing_slicing = { level = "warn" }
# Checks for whole number float literals that cannot be represented as the underlying type without loss.
lossy_float_literal = { level = "warn" }
# Checks for usage of std::mem::forget(t) where t is Drop or has a field that implements Drop.
mem_forget = { level = "warn" }
# Checks for identifiers which consist of a single character (or fewer than the configured threshold).
min_ident_chars = { level = "warn" }
# Checks assertions without a custom panic message.
missing_assert_message = { level = "warn" }
# Warns if there is missing documentation for any private documentable item.
missing_docs_in_private_items = { level = "warn" }
# Checks if a provided method is used implicitly by a trait implementation.
missing_trait_methods = { level = "warn" }
# Detects public item names that are prefixed or suffixed by the containing public module’s name.
module_name_repetitions = { level = "warn" }
# Restricts the usage of pub use ...
pub_use = { level = "warn" }
# Checks for test functions (functions annotated with #[test]) that are prefixed with test_ which is redundant.
redundant_test_prefix = { level = "warn" }
# Checks for usages of the ref keyword.
ref_patterns = { level = "warn" }
# Lints when the name of function parameters from trait impl is different than its default implementation.
renamed_function_params = { level = "warn" }
# It lints if a struct has two methods with the same name: one from a trait, another not from a trait.
same_name_method = { level = "warn" }
# Checks that module layout uses only mod.rs files.
self_named_module_files = { level = "warn" }
# Checks for bindings that shadow other bindings already in scope, while reusing the original value.
shadow_reuse = { level = "warn" }
# Checks for bindings that shadow other bindings already in scope, while just changing reference level or mutability.
shadow_same = { level = "warn" }
# Checks for bindings that shadow other bindings already in scope, either without an initialization or with one that does not even use the original value.
shadow_unrelated = { level = "warn" }
# Checks for wildcard enum matches using _.
wildcard_enum_match_arm = { level = "warn" }
# Checks for usage of File::read_to_end and File::read_to_string.
verbose_file_reads = { level = "warn" }
# Checks for usage of Debug formatting. The purpose of this lint is to catch debugging remnants.
use_debug = { level = "warn" }
# Checks for use Trait where the Trait is only used for its methods and not referenced by a path directly.
unused_trait_names = { level = "warn" }
# Checks for calls to Result::ok() without using the returned Option.
unused_result_ok = { level = "warn" }
