[package]
name = "dlp-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dlp-migration = { path = "../migration" }
dlp-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
