[package]
name = "dlp"
version.workspace = true
edition.workspace = true

[dependencies]
app-config = { path = "../app-config" }
anyhow.workspace = true
clap.workspace = true
client-sdk = { path = "../client-sdk" }
tokio.workspace = true

[dev-dependencies]
control-plane = { path = "../control-plane" }
