[package]
name = "ui"
version.workspace = true
edition.workspace = true

[lib]
name = "ui_app"
crate-type = ["cdylib", "rlib"]

[dependencies]
client-sdk = { path = "../client-sdk" }
console_error_panic_hook.workspace = true
leptos.workspace = true

[build-dependencies]
app-config = { path = "../app-config" }
